--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^8.3.2",
     "next": "^14.2.2",
     "next-auth": "^4.24.7",
+    "next-images": "^1.8.5",
     "react": "^18",
     "react-18-image-lightbox": "^5.1.4",
     "react-apexcharts": "^1.4.1",
