--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "json-server": "^1.0.0-alpha.23",
     "mongodb": "^6.5.0",
